# DPM_backend

./: .gitignore  Dockerfile  docker-compose.yaml  nginx.conf  pyproject.toml
configs/: dev.env  prod.env
dpm_new_front/: common_profile.html  letter_sended.html  login.html  my_skills.html  new_password.html  package-lock.json  password_restore.html  register.html  test.html
dpm_new_front/styles/: style.css
web_appication/: manage.py
web_appication/about_application/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
web_appication/application_core/: asgi.py  settings.py  urls.py  wsgi.py
web_appication/auth_app/: forms.py  models.py  urls.py  views.py
web_appication/auth_application/: __init__.py  apps.py  services.py  views.py
web_appication/contact_application/: admin.py  models.py
web_appication/country_application/: admin.py  apps.py  serializers.py
web_appication/cv_application/: admin.py  apps.py  models.py  serializers.py  urls.py
web_appication/document_application/: admin.py  apps.py
web_appication/employee_application/: admin.py  apps.py  models.py  serializers.py  views.py
web_appication/experience_application/: apps.py
web_appication/location_application/: apps.py  models.py
web_appication/news_application/: __init__.py  admin.py  apps.py  urls.py  views.py
web_appication/personal_info_application/: apps.py  models.py  serializers.py
web_appication/profile_application/: __init__.py  apps.py  models.py  serializers.py
web_appication/rchilli_application/: apps.py  utils.py  views.py
(+128 files in other folders)
