[tool.poetry]
name = "dpm-drf"
version = "0.1.0"
description = ""
authors = ["pavel <pavelklimovskoy@mail.ru>"]
readme = "README.md"
packages = [{include = "dpm_drf"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
requests = "^2.31.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
